# quran-lexicon-expansion

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  multi_stage_retriever.py  project_structure.md  pyproject.toml  quran_dataset_loader.py  quran_example.py  requirements.txt  run_local.py  run_tests.py  setup_data.py  test_media_processing.py  test_system.py
app/: app.py  config.py
config/: agents.yaml  custom_agents.yaml  settings.json
core/: agent_controller.py  resource_manager.py
data/: expansion_words_sample.txt  quran_lexicon_sample.json
docs/: README.md  agent_loader.md  agent_system.md  architecture.md  code_optimization_template.py  dashboard_components.md  dashboard_design.md  development_methodology.md  implementation_guide.md  llama_index_migration.md  llama_index_migration_analysis.md  performance_checklist.md  performance_optimization_guide.md  project_structure.md  python_dashboard_design.md  system_design.md
examples/: auto_agent_example.py  hybrid_processor_example.py  hybrid_processor_with_algorithms_example.py  lexicon_example.py  lexicon_expansion_example.py  simple_example.py
quran_data/: scientific_miracles.json
reports/: algorithm_improvement_report.md  algorithm_results.json  audit_report.md  audit_results.csv  evaluation_report.md  evaluation_results.json  execution_stats.json  stage3_final_report.md
scripts/: evaluation_system.py  generate_stage3_report.py  improve_algorithms.py  migrate_data.py  process_islamic_resources.py  run_lexicon_expansion.py  run_stage3_completion.py  setup.sh  stage4_plan.py
ui/: app.py  (+1 more)
(+121 files in other folders)
