[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# تمكين مجموعة من القواعد، بما في ذلك تلك التي تتحقق من مسارات الاستيراد
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = []
# مسار المشروع للاستخدام في تحليل مسارات الاستيراد
src = ["local_mem0_agent"]
# طول السطر الأقصى
line-length = 100
# تمكين التصحيح التلقائي لبعض المشاكل
fix = true

# تكوين قاعدة ترتيب الاستيرادات
[tool.ruff.isort]
# فصل مجموعات الاستيراد
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["local_mem0_agent"]

# تكوين قواعد الاستيراد الخاصة
[tool.ruff.per-file-ignores]
# استثناءات لملفات معينة
"tests/*" = ["E501", "F403"]
"local_mem0_agent/app.py" = ["E402"]  # السماح بالاستيرادات بعد التعليقات في ملف التطبيق الرئيسي

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "ollama.*", "sentence_transformers.*", "mem0.*"]
ignore_missing_imports = true
